--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Joana Miranda
 author: Joana Miranda
 email: joana.miranda25@gmail.com
-description: > # this means to ignore newlines until "exclude"
+description: >
   Write an awesome description for your new site here. This could
   for example be used for SEO purposes.
 
@@ -11,7 +11,4 @@ exclude:
   - README.md
   - .gitignore
 
-# Date format for posts
-# refer to http://shopify.github.io/liquid/filters/date/ if you
-# want to customize this
 date_format: "%b %-d, %Y"
